# match-engine

./: API_DOCUMENTATION.md  API_README.md  Cargo.toml  Makefile
src/: lib.rs
src/api/: mod.rs
src/api/database/: mod.rs
src/api/handlers/: mod.rs  order_handlers.rs  orderbook_handlers.rs  query_handlers.rs
src/api/middleware/: error_handlers.rs  mod.rs
src/api/models/: mod.rs  order.rs  orderbook.rs  response.rs  trade.rs  user.rs
src/api/redis/: mod.rs
