[package]
name = "orderbook-rs"
version = "0.2.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "A high-performance, lock-free price level implementation for limit order books in Rust. This library provides the building blocks for creating efficient trading systems with support for multiple order types and concurrent access patterns."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/OrderBook-rs"
homepage = "https://github.com/joaquinbejar/OrderBook-rs"
keywords = ["finance", "orderbook", "trading"]
categories = ["finance", "data-structures"]


include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*.png",
    "Docker/**/*.Dockerfile",
    "Docker/**/*.yml",
]

[dependencies]
tracing = { workspace = true }
uuid = { workspace = true }
pricelevel = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.8"
tracing-actix-web = "0.7"

# Database
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = "0.10"
redis = { version = "0.24", features = ["tokio-comp"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# URL parsing
url = "2.5"

# Configuration
config = "0.14"
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
tracing-subscriber = "0.3.20"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[[bin]]
name = "orderbook-api"
path = "src/bin/main.rs"


[lib]
name = "orderbook_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "examples"
]

[workspace.dependencies]
orderbook-rs = { path = "." }
tracing = "0.1"
pricelevel = "0.2"
uuid = { version = "1.18", features = ["v4", "v5", "serde"] }
dashmap = "6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }